# meson-python-zig

./: .gitignore  README.md  cross-x86_64-windows.ini  cross-x86_64-windows.txt  meson.build  pyproject.toml  zig-cc-wrapper  zig_build_lib_wrapper.py  zig_cc_wrapper.py
cross/: aarch64-linux-gnu.ini  aarch64-macos.ini  x86_64-linux-gnu.ini  x86_64-macos.ini
pypkg/: __main__.py  extern.c
